syntax = "proto3";
package protos.connectors.assets;

import "google/protobuf/wrappers.proto";


message PagerDutyIncidentModel {
  google.protobuf.StringValue incident_id = 1;
  google.protobuf.StringValue priority = 2;
  google.protobuf.StringValue created_at = 3;
  google.protobuf.StringValue alerts = 4;
}

message PagerDutyAlertModel {
  google.protobuf.StringValue alert_id = 1;
  google.protobuf.StringValue incident_id = 2;
  google.protobuf.StringValue summary = 3;
  google.protobuf.StringValue body  = 4;
}

message PagerDutyAssets {
  repeated PagerDutyIncidentModel incidents = 1;
  repeated PagerDutyAlertModel alerts = 2;
}

